--- a/frontend/styles/style.css
+++ b/frontend/styles/style.css
@@ -23,7 +23,7 @@
 }
 
 #hero {
-  height: 100vh;
+  min-height: 70vh;
 }
 
 #hero .hero-text h1 {
@@ -35,9 +35,54 @@
   color: #9D53FF;
 }
 
-#hero .hero-image img {
+#hero .hero-image {
   max-width: 100%;
-  max-height: 400px;
   height: auto;
+}
+
+#hero .btn-hero {
+  background-color: #FB9649;
+  border-radius: 30px;
+  font-family: "source sans pro";
+  font-weight: normal;
+  font-size: 18px;
+}
+
+.section-classes-bg {
+  min-height: 400px;
+  margin-top: 100px;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#C89DFF), to(#6E31BF));
+  background-image: linear-gradient(#C89DFF, #6E31BF);
+}
+
+.section-classes-bg .section-classes-heading h2 {
+  font-family: "playfair display";
+  font-weight: bold;
+}
+
+.section-classes {
+  margin-top: -200px;
+  z-index: 5;
+}
+
+.section-classes .card-class {
+  background-size: cover;
+  min-height: 350px;
+  margin-bottom: 150px;
+  padding: 15px;
+}
+
+.section-classes .card-class .judul {
+  font-family: "playfair display";
+  color: white;
+  font-size: 24px;
+  margin-top: 75px;
+}
+
+.section-classes .card-class .btn-join {
+  background-color: #FB9649;
+  border-radius: 30px;
+  margin-top: 180px;
+  font-weight: 400;
 }
 /*# sourceMappingURL=style.css.map */
