--- a/frontend/styles/style.scss
+++ b/frontend/styles/style.scss
@@ -1,5 +1,10 @@
+$purple : #9D53FF;
+$orange : #FB9649;
+$source : "source sans pro";
+$playfair : "playfair display";
+
 .navbar{
-    background-color: #9D53FF;
+    background-color: $purple;
 }
 
 .navbar-brand{
@@ -16,7 +21,7 @@
     font-weight: normal;
 }
 .signin-button{
-    background-color: #FB9649;
+    background-color: $orange ;
     border: 0;
     border-radius: 30px;
     font-family: "source sans pro";
@@ -25,22 +30,62 @@
 }
 
 #hero{
-    height: 100vh;
-
+    min-height: 70vh;
     .hero-text{
         h1{
             font-family: "playfair display";
             font-size: 60px;
         }
         span{
-            color: #9D53FF;
+            color: $purple;
         }
     }
     .hero-image{
-        img{
-            max-width: 100%;
-            max-height: 400px;
-            height: auto;
+        max-width: 100%;
+        height: auto;
+    }
+    .btn-hero{
+        background-color: $orange;
+        border-radius: 30px;
+        font-family: "source sans pro";
+        font-weight: normal;
+        font-size: 18px;
+        
+    }
+}
+
+.section-classes-bg{
+    min-height: 400px;
+    margin-top: 100px;
+    background-image: linear-gradient(#C89DFF, #6E31BF);
+
+    .section-classes-heading{
+        h2{
+            font-family: $playfair;
+            font-weight: bold;
+        }
+    }
+}
+
+.section-classes{
+    margin-top: -200px;
+    z-index: 5;
+    .card-class{
+        background-size: cover;
+        min-height: 350px;
+        margin-bottom: 150px;
+        padding: 15px;
+        .judul{
+            font-family: $playfair;
+            color: white;
+            font-size: 24px;
+            margin-top: 75px;
+        }
+        .btn-join{
+            background-color: $orange;
+            border-radius: 30px;
+            margin-top: 180px;
+            font-weight: 400;
         }
     }
 }
