--- a/frontend/styles/style.scss
+++ b/frontend/styles/style.scss
@@ -75,17 +75,39 @@ $playfair : "playfair display";
         min-height: 350px;
         margin-bottom: 150px;
         padding: 15px;
+
         .judul{
             font-family: $playfair;
             color: white;
             font-size: 24px;
-            margin-top: 75px;
+            margin-top: 45px;
         }
         .btn-join{
             background-color: $orange;
             border-radius: 30px;
-            margin-top: 180px;
+            margin-top: 200px;
             font-weight: 400;
+        }
+    }
+}
+
+.reason{
+    .reason-heading{
+        font-family: $playfair;
+        font-weight: bold;
+    }
+    .reason-content{
+        img{
+                height: auto;
+                max-width: 100%;
+        }
+
+        h4{
+            font-family: $playfair;
+        }
+
+        p{
+            font-family: $source;
         }
     }
 }
