--- a/frontend/styles/style.scss
+++ b/frontend/styles/style.scss
@@ -1,131 +1,163 @@
-$purple : #9D53FF;
-$orange : #FB9649;
-$source : "source sans pro";
-$playfair : "playfair display";
+$purple: #9d53ff;
+$orange: #fb9649;
+$source: "source sans pro";
+$playfair: "playfair display";
 
-.navbar{
-    background-color: $purple;
+.navbar {
+  background-color: $purple;
 }
 
-.navbar-brand{
-    img{
-        max-height: 40px;
+.navbar-brand {
+  img {
+    max-height: 40px;
+  }
+}
+
+.signup-button {
+  background-color: white;
+  border: 0;
+  border-radius: 30px;
+  font-family: "source sans pro";
+  font-weight: normal;
+}
+.signin-button {
+  background-color: $orange;
+  border: 0;
+  border-radius: 30px;
+  font-family: "source sans pro";
+  font-weight: normal;
+}
+
+#hero {
+  min-height: 70vh;
+  .hero-text {
+    h1 {
+      font-family: "playfair display";
+      font-size: 60px;
     }
-}
-
-.signup-button{
-    background-color: white;
-    border: 0;
+    span {
+      color: $purple;
+    }
+  }
+  .hero-image {
+    max-width: 100%;
+    height: auto;
+  }
+  .btn-hero {
+    background-color: $orange;
     border-radius: 30px;
     font-family: "source sans pro";
     font-weight: normal;
+    font-size: 18px;
+  }
 }
-.signin-button{
-    background-color: $orange ;
-    border: 0;
+
+.section-classes-bg {
+  min-height: 400px;
+  margin-top: 100px;
+  background-image: linear-gradient(#c89dff, #6e31bf);
+
+  .section-classes-heading {
+    h2 {
+      font-family: $playfair;
+      font-weight: bold;
+    }
+  }
+}
+
+.section-classes {
+  margin-top: -200px;
+  z-index: 5;
+  .card-class {
+    background-size: cover;
+    min-height: 350px;
+    margin-bottom: 150px;
+    padding: 15px;
+
+    .judul {
+      font-family: $playfair;
+      color: white;
+      font-size: 24px;
+      margin-top: 45px;
+    }
+    .btn-join {
+      background-color: $orange;
+      border-radius: 30px;
+      margin-top: 200px;
+      font-weight: 400;
+    }
+  }
+}
+
+.reason {
+  .reason-heading {
+    font-family: $playfair;
+    font-weight: bold;
+  }
+  .reason-content {
+    img {
+      height: auto;
+      max-width: 100%;
+    }
+
+    h4 {
+      font-family: $playfair;
+    }
+
+    p {
+      font-family: $source;
+    }
+  }
+  .btn-reason {
+    background-color: $orange;
+    font-family: $source;
     border-radius: 30px;
-    font-family: "source sans pro";
+    border: 0;
     font-weight: normal;
-
+  }
 }
 
-#hero{
-    min-height: 70vh;
-    .hero-text{
-        h1{
-            font-family: "playfair display";
-            font-size: 60px;
-        }
-        span{
-            color: $purple;
-        }
-    }
-    .hero-image{
-        max-width: 100%;
-        height: auto;
-    }
-    .btn-hero{
-        background-color: $orange;
-        border-radius: 30px;
-        font-family: "source sans pro";
-        font-weight: normal;
-        font-size: 18px;
-        
-    }
+.footer-content {
+  li {
+    list-style: none;
+  }
 }
 
-.section-classes-bg{
-    min-height: 400px;
-    margin-top: 100px;
-    background-image: linear-gradient(#C89DFF, #6E31BF);
-
-    .section-classes-heading{
-        h2{
-            font-family: $playfair;
-            font-weight: bold;
-        }
-    }
+.copyright {
+  font-size: 11px;
 }
 
-.section-classes{
-    margin-top: -200px;
-    z-index: 5;
-    .card-class{
-        background-size: cover;
-        min-height: 350px;
-        margin-bottom: 150px;
-        padding: 15px;
-
-        .judul{
-            font-family: $playfair;
-            color: white;
-            font-size: 24px;
-            margin-top: 45px;
-        }
-        .btn-join{
-            background-color: $orange;
-            border-radius: 30px;
-            margin-top: 200px;
-            font-weight: 400;
-        }
+.details {
+  min-height: 100vh;
+  h4 {
+    font-family: $playfair;
+    float: left;
+  }
+  .details-card {
+    float: left;
+    padding: 0;
+    img {
+      padding: 0;
+      height: auto;
+      max-width: 100%;
     }
-}
-
-.reason{
-    .reason-heading{
-        font-family: $playfair;
-        font-weight: bold;
-    }
-    .reason-content{
-        img{
-                height: auto;
-                max-width: 100%;
-        }
-
-        h4{
-            font-family: $playfair;
-        }
-
-        p{
-            font-family: $source;
-        }
-    }
-    .btn-reason{
-        background-color: $orange;
+    .what-you-get {
+      h5 {
         font-family: $source;
-        border-radius: 30px;
-        border: 0;
-        font-weight: normal;
+      }
+      p {
+        font-family: $source;
+      }
     }
-}
-
-.footer-content{
-
-    li{
-        list-style: none;
+  }
+  .join-card {
+    float: right;
+    .card-title{
+        background-color: $purple;
+        min-height: 50px;
+        span{
+            font-family: $playfair;
+        }
     }
-}
-
-.copyright{
-    font-size: 11px;
+  }
 }
